plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.github.korbeckik'
version = '0.0.1-SNAPSHOT'

bootJar {
    enabled = false
}

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //MAPPER
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.2'

    // UTILS
    implementation 'org.apache.commons:commons-lang3:3.13.0'

}

tasks.named('test') {
    useJUnitPlatform()
}
